# bazel_helloworld

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
.ijwb/: .bazelproject
hello/: BUILD.bazel
hello2/: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-hello2  bazel-out  bazel-testlogs  go.mod  go.sum  main.go  prdel.bzl  repositories.bzl
hello4/: BUILD.bazel  main.go
