load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude vendor
# gazelle:proto disable
# gazelle:prefix prdel
gazelle(name = "gazelle")

#go_library(
#    name = "go_default_library",
#    srcs = ["main.go"],
#    importpath = "github.com/adamplansky/bazel_helloworld/hello2",
#    #    visibility = ["//visibility:private"],
#    visibility = ["//visibility:public"],
#    deps = ["@hello2_com_github_adamplansky_bazel_deps//hello:go_default_library"],
#)
#
#go_binary(
#    name = "hello2",
#    embed = [":go_default_library"],
#    visibility = ["//visibility:public"],
#)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "prdel",
    visibility = ["//visibility:private"],
    deps = ["@hello2_com_github_adamplansky_bazel_deps//hello:go_default_library"],
)

go_binary(
    name = "hello2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
