load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/adamplansky/bazel_helloworld/hello4",
    visibility = ["//visibility:private"],
    deps = ["@com_github_adamplansky_bazel_deps//hello:go_default_library"],
)

go_binary(
    name = "hello4",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
